# Ros2-Ws

src/ika_robot/: package.xml  setup.cfg  setup.py
src/ika_robot/ika_robot/: dummy_camera_node.py  dummy_camera_subscriber.py
src/obstacle_avoidance/: package.xml  setup.cfg  setup.py
src/obstacle_avoidance/obstacle_avoidance/: fake_lidar_publisher.py  obstacle_avoidance_node.py
