<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoidance</name>
  <version>0.0.0</version>
  <description>Simple obstacle avoidance node</description>
  <maintainer email="ika@todo.todo">ika</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

